<resources>
    <string name="app_name">GuidezApp</string>
    <string name="title_activity_tab1">Tab1Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab2">Tab2Activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings_general -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings_general for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings_general for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_another_settings">Settings</string>

    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_summary">Вкл. или выкл. сеть WiFi</string>
    <string name="hints_title">Подсказки</string>
    <string name="hints_summary">Показывать подсказки</string>


    // Vlad's settings
    <string name="pref_title_ui_language">UI Language</string>
    <string name="pref_guide_language_title">Show Guides by Languages</string>
    <string name="pref_notifications_summary">Get notificatins about closed guide</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_ui_language_summary">Choose the language of the user interface</string>
    <string name="pref_guide_language_summary">Choose guides according to you language</string>
    <string-array name="pref_ui_language_list_titles">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="pref_ui_language_list_values">
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_tab">TabActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
